deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-metrics-service
spec:
  selector:
    app: iot-metrics
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
